# liveoak-hs

./: .gitignore  .hlint.yaml  README.md  liveoak.cabal
app/: Main.hs
src/LiveOak/: ARM.hs  ARMCodegen.hs  ARMPeephole.hs  ARMRegAlloc.hs  ARMRuntime.hs  Algebraic.hs  Alias.hs  Ast.hs  BlockMerge.hs  BranchProb.hs  CFG.hs  CFGAnalysis.hs  CmovLower.hs  Coalesce.hs  Codegen.hs  Compiler.hs  CopyProp.hs  DCE.hs  DSE.hs  DataFlow.hs  DeadArg.hs  Devirtualize.hs  Diag.hs  Dominance.hs  Escape.hs  GVN.hs  IPCP.hs  IVTransform.hs  Inline.hs  InstCombine.hs  JumpThread.hs  LCSSA.hs  LICM.hs  LLVMCodegen.hs  Lexer.hs  Liveness.hs  LoadElim.hs  LoadForward.hs  Loop.hs  LoopFusion.hs  (+50 more)
src/LiveOak/DataFlow/: AST.hs  SSA.hs
test/: CompilerTest.hs  Main.hs  PropertyTest.hs  SimulatorTest.hs
test/resources/InvalidPrograms/: param_count_mismatch.lo  param_mismatch_detail.lo  param_type_mismatch.lo  test_0.lo  test_1.lo  test_10.lo  test_11.lo  test_12.lo  test_13.lo  test_14.lo  test_2.lo  test_3.lo  test_4.lo  test_5.lo  test_6.lo  test_7.lo  test_8.lo  test_9.lo  unknown_type_field.lo  unknown_type_local.lo  unknown_type_param.lo  unknown_type_return.lo
test/resources/ValidPrograms/: bst.lo  car_and_main.lo  const_folding_example.lo  forward_declared_class.lo  test_15.lo  test_16.lo  test_17.lo  test_18.lo  test_19.lo  test_20.lo  test_21.lo  test_22.lo  test_23.lo  test_24.lo  test_25.lo  test_26.lo  test_27.lo  test_28.lo  test_29.lo  test_30.lo  test_31.lo  test_32.lo  test_33.lo  test_34.lo  test_35.lo  test_36.lo  test_37.lo  test_38.lo  test_39.lo  test_40.lo  test_41.lo  test_42.lo  test_43.lo  test_44.lo  test_45.lo  test_46.lo  test_47.lo  test_48.lo  test_49.lo  test_comparison_ops.lo  (+6 more)
