cabal-version:      3.0
name:               liveoak
version:            0.1.0.0
synopsis:           LiveOak 3 compiler targeting SAM assembly
description:        A compiler for the LiveOak 3 object-oriented language,
                    generating code for the SAM (Stack Abstract Machine).
license:            MIT
author:             Dean
maintainer:         dean@example.com
category:           Compilers
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  LiveOak.Types
                    , LiveOak.Ast
                    , LiveOak.Symbol
                    , LiveOak.Diag
                    , LiveOak.Lexer
                    , LiveOak.Parser
                    , LiveOak.Semantic
                    , LiveOak.Warnings
                    , LiveOak.Optimize
                    , LiveOak.Codegen
                    , LiveOak.Peephole
                    , LiveOak.DataFlow
                    , LiveOak.DataFlow.AST
                    , LiveOak.SSA
                    , LiveOak.SSATypes
                    , LiveOak.SSAUtils
                    , LiveOak.MapUtils
                    , LiveOak.CFG
                    , LiveOak.Dominance
                    , LiveOak.SSACodegen
                    , LiveOak.Loop
                    , LiveOak.SCCP
                    , LiveOak.GVN
                    , LiveOak.LICM
                    , LiveOak.Coalesce
                    , LiveOak.DCE
                    , LiveOak.StringRuntime
                    , LiveOak.SSATypeInfer
                    , LiveOak.Compiler
                    , LiveOak.Sam
                    , LiveOak.TailCall
                    , LiveOak.Inline
                    , LiveOak.PRE
                    , LiveOak.Escape
                    , LiveOak.StrengthReduce
                    , LiveOak.RegAlloc
                    , LiveOak.Schedule
                    , LiveOak.PhiLower
                    , LiveOak.Validation
                    , LiveOak.CFGAnalysis
                    , LiveOak.DSE
                    , LiveOak.SROA
                    , LiveOak.Unroll
                    , LiveOak.JumpThread
                    , LiveOak.OptConfig
                    , LiveOak.OptContext
                    , LiveOak.OptStats
                    , LiveOak.SSAOptimize
                    , LiveOak.SSARebuild
                    , LiveOak.SSAPipeline
                    , LiveOak.Alias
                    , LiveOak.ValueRange
                    , LiveOak.LoadForward
                    , LiveOak.CopyProp
                    , LiveOak.PhiSimplify
                    , LiveOak.BlockMerge
                    , LiveOak.NullCheck
                    , LiveOak.DeadArg
                    , LiveOak.ReturnProp
                    , LiveOak.OptPass
                    , LiveOak.Algebraic
                    , LiveOak.Reassoc
                    , LiveOak.LoadElim
                    , LiveOak.LCSSA
                    , LiveOak.InstCombine
                    , LiveOak.X86
                    , LiveOak.X86Codegen
                    , LiveOak.X86Runtime
                    , LiveOak.X86Liveness
                    , LiveOak.X86RegAlloc
    build-depends:    base >= 4.17 && < 5
                    , text >= 2.0
                    , megaparsec >= 9.0
                    , containers >= 0.6
                    , mtl >= 2.3
                    , transformers >= 0.6
                    , vector >= 0.13
    hs-source-dirs:   src
    default-language: GHC2021

executable liveoak
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.17 && < 5
                    , liveoak
                    , text >= 2.0
    hs-source-dirs:   app
    default-language: GHC2021

test-suite liveoak-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    CompilerTest
                    , SimulatorTest
                    , PropertyTest
    build-depends:    base >= 4.17 && < 5
                    , liveoak
                    , text >= 2.0
                    , containers >= 0.6
                    , tasty >= 1.4
                    , tasty-hunit >= 0.10
                    , tasty-quickcheck >= 0.10
                    , QuickCheck >= 2.14
                    , directory >= 1.3
                    , filepath >= 1.4
    hs-source-dirs:   test
    default-language: GHC2021
